src/test/ui/parser/removed-syntax-fn-sigil.stderr
error: expected `(`, found `~`
  --> $DIR/removed-syntax-fn-sigil.rs:2:14
   |
LL |     let x: fn~() = || ();
   |         -    ^ expected `(`
   |         |
   |         while parsing the type for `x`

error: aborting due to previous error

