src/test/ui/parser/removed-syntax-fn-sigil.rs
// compile-flags: -Z parse-only

fn f() {
    let x: fn~() = || (); //~ ERROR expected `(`, found `~`
}
